// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BitcoinAddressInput renders correctly 1`] = `
<View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingLeft": 12,
          "paddingRight": 12,
          "width": "100%",
        },
        {
          "borderRadius": 12,
          "borderWidth": 1,
          "overflow": "hidden",
        },
        {
          "backgroundColor": "#FFFCFA",
        },
        {
          "borderColor": "#2B1911",
        },
        false,
        false,
        {
          "marginBottom": 1,
          "marginTop": 1,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={false}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={false}
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onEndEditing={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholder="bc1q ..."
      placeholderTextColor="#BAADA7"
      removeClippedSubviews={false}
      style={
        [
          {
            "flexShrink": 1,
            "fontFamily": "Baloo2-Regular",
            "fontSize": 18,
            "height": 40,
            "letterSpacing": 0.18,
            "lineHeight": 29.25,
            "paddingBottom": 0,
            "paddingTop": 0,
            "width": "100%",
          },
          {
            "color": "#2B1911",
          },
          false,
          {
            "borderColor": "transparent",
            "borderWidth": 1,
          },
          false,
          false,
        ]
      }
      textAlignVertical="center"
      value="bc1qcj5y ... n57r7z"
    />
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <Text
          allowFontScaling={false}
          color="#2B1911"
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              {
                "height": 20,
                "marginLeft": 16,
                "width": 20,
              },
            ]
          }
        >
          clipboard
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <Text
          allowFontScaling={false}
          color="#2B1911"
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              {
                "height": 20,
                "marginLeft": 16,
                "width": 20,
              },
            ]
          }
        >
          camera
        </Text>
      </View>
    </View>
  </View>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        [
          {
            "fontFamily": "Baloo2-Medium",
            "fontSize": 14,
            "letterSpacing": 0.14,
            "lineHeight": 20,
            "marginLeft": 12,
            "marginTop": 4,
          },
          {
            "color": "#DF321F",
          },
        ],
      ]
    }
  >
     
  </Text>
</View>
`;

exports[`BitcoinAddressInput shows QR scanner when camera icon is pressed 1`] = `
<ScanQR
  onCancel={[Function]}
  onSuccess={[Function]}
  testID="qr-code-scanner"
/>
`;

exports[`BitcoinAddressInput shows full address when focused 1`] = `
<View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingLeft": 12,
          "paddingRight": 12,
          "width": "100%",
        },
        {
          "borderRadius": 12,
          "borderWidth": 1,
          "overflow": "hidden",
        },
        {
          "backgroundColor": "#FFFCFA",
        },
        {
          "borderColor": "#2B1911",
        },
        false,
        false,
        {
          "marginBottom": 1,
          "marginTop": 1,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={false}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={false}
      editable={true}
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onEndEditing={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholder="bc1q ..."
      placeholderTextColor="#BAADA7"
      removeClippedSubviews={false}
      style={
        [
          {
            "flexShrink": 1,
            "fontFamily": "Baloo2-Regular",
            "fontSize": 18,
            "height": 40,
            "letterSpacing": 0.18,
            "lineHeight": 29.25,
            "paddingBottom": 0,
            "paddingTop": 0,
            "width": "100%",
          },
          {
            "color": "#2B1911",
          },
          false,
          {
            "borderColor": "transparent",
            "borderWidth": 1,
          },
          false,
          false,
        ]
      }
      textAlignVertical="center"
      value="bc1qcj5yzmk8mjynz5vyxmre5zsgtntkwkcgn57r7z"
    />
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <Text
          allowFontScaling={false}
          color="#2B1911"
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              {
                "height": 20,
                "marginLeft": 16,
                "width": 20,
              },
            ]
          }
        >
          clipboard
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <Text
          allowFontScaling={false}
          color="#2B1911"
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              {
                "height": 20,
                "marginLeft": 16,
                "width": 20,
              },
            ]
          }
        >
          camera
        </Text>
      </View>
    </View>
  </View>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        [
          {
            "fontFamily": "Baloo2-Medium",
            "fontSize": 14,
            "letterSpacing": 0.14,
            "lineHeight": 20,
            "marginLeft": 12,
            "marginTop": 4,
          },
          {
            "color": "#DF321F",
          },
        ],
      ]
    }
  >
     
  </Text>
</View>
`;
